<resources>
    <string name="app_name">SmartAlert</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hint_name">First Name</string>
    <string name="hint_surname">Last Name</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_signin">Already have an account? <b>Sign in</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>
    <string name="select_language">Select Language</string>
    <string name="apply_profile">Apply</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="sign_out_item_android_id">Sign Out</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="new_alert">New Alert</string>
    <string name="alert_form">What is the emergency alert?</string>
    <string name="alert_form_textview">Please choose the natural disaster:</string>
    <string name="alert_form_textview2">Please write any useful comments:</string>
    <string name="alert_form_btnimage">Choose Image</string>
    <string name="alert_form_btn">Send Alert</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="hello_signin">Hello, sign in to your account</string>
    <string name="hello_employee">Hello Employee, these are the ongoing alerts</string>
    <string name="welcome">Welcome to SmartAlert!</string>
</resources>