<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/person"
            android:title="@string/profile"/>

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_stat"
            android:icon="@drawable/nav_statistics"
            android:title="@string/statistics"/>
    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/nav_signout"
                android:title="@string/sign_out_item_android_id"/>
        </menu>
    </item>


</menu>