<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlertForm">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="657dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/alert_form"
            android:textColor="#696969"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.065"
            android:layout_marginTop="50dp">

        </TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_marginTop="60dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/alert_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="1dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/alert_form_textview"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/alert_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="60dp"
                android:focusable="false">

            </EditText>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/alert_btnimage"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/button1_bg"
            android:text="@string/alert_form_btnimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/alert_imageview"
            android:layout_width="181dp"
            android:layout_height="144dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:indeterminateTint="#EF5350"
            android:visibility="invisible" />

        <Button
            android:id="@+id/alert_btn"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/button1_bg"
            android:text="@string/alert_form_btn"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>